fixing visibility of data and metadata in browse, small fixes to PREMIS css

--- a/roda-ui/roda-wui/src/main/resources/pt/gov/dgarq/roda/wui/dissemination/browse/public/Browse.css
+++ b/roda-ui/roda-wui/src/main/resources/pt/gov/dgarq/roda/wui/dissemination/browse/public/Browse.css
@@ -191,10 +191,6 @@
 	content: ':';
 }
 
-.identifier+.identifier:before {
-	content: ',';
-}
-
 .representation .header .identifiers {
 	font-size: 1.5rem;
 }
